tests/ui/simd/const-err-trumps-simd-err.stderr
error[E0080]: evaluation of `get_elem::<4>::{constant#0}` failed
  --> $DIR/const-err-trumps-simd-err.rs:16:13
   |
LL |     const { assert!(LANE < 4); } // the error should be here...
   |             ^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'assertion failed: LANE < 4', $DIR/const-err-trumps-simd-err.rs:16:13
   |
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

note: the above error was encountered while instantiating `fn get_elem::<4>`
  --> $DIR/const-err-trumps-simd-err.rs:23:5
   |
LL |     get_elem::<4>(int8x4_t(0,0,0,0));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
